deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aggrovites
  name: aggrovites
  namespace: aggrovites
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggrovites
  strategy:
    rollingUpdate:
      maxSurge: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: aggrovites
    spec:
      containers:
      - env:
        - name: GIN_MODE
          value: release
        - name: DATABASE_URL
          value: postgresql://root@cockroachdb-public.cockroach.svc.cluster.local:26257/defaultdb?sslmode=disable
        image: paulgmiller/aggrovites:cockroach-20261004-1
        imagePullPolicy: Always
        name: aggrovites
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
          readOnlyRootFilesystem: true
        ports:
          - name: api
            containerPort: 9000
        readinessProbe: 
          httpGet:
            path: /ready
            port: 9000
        resources:
          limits:
            cpu: 100m
            memory: 300Mi
          requests:
            cpu: 50m
            memory: 300Mi
