ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aggrovites-ingress
  namespace: aggrovites
spec:
  rules:
  - host: aggrovites.northbriton.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aggrovites
            port:
              number: 80
  - host: nicevites.northbriton.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aggrovites
            port:
              number: 80
